feat(Problem7): 모든 친구, 이미 친구인 사람, 친구가 아닌 사람 리스트로 정리 기능 구현